# school-devops-python

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml
docs/: REPORT.md
frontend/: Dockerfile  app.js  index.html  styles.css
service_courses/: Dockerfile  requirements.txt
service_courses/app/: __init__.py  config.py  main.py  schemas.py
service_courses/app/controllers/: __init__.py  courses_controller.py
service_courses/app/data/: __init__.py  database.py  models.py  repository.py
service_courses/app/services/: __init__.py  course_service.py
service_courses/tests/: conftest.py  test_controller.py  test_course_service.py  test_repository.py
service_students/: Dockerfile  requirements.txt
service_students/app/: __init__.py  config.py  main.py  schemas.py
service_students/app/controllers/: __init__.py  students_controller.py
service_students/app/data/: __init__.py  database.py  models.py  repository.py
service_students/app/services/: __init__.py  courses_client.py  student_service.py
service_students/tests/: conftest.py  test_controller.py  test_repository.py  test_student_service.py
