[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "school-devops-python"
version = "1.0.0"
description = "Two FastAPI microservices (Students + Courses) wired by docker-compose, with a vanilla-JS dashboard."
requires-python = ">=3.12"

# The repo root is not an importable package — the apps live in
# service_*/app. `pip install -e ".[dev]"` only exists to pull the dev
# tooling below, so tell setuptools there is nothing to package.
[tool.setuptools]
py-modules = []

# Dev / test dependencies (installed in CI and locally for tooling).
[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "respx==0.21.1",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "black==24.4.2",
    "mypy==1.10.0",
]

# ----------------------------------------------------------------- ruff
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI uses function calls (Depends()) in defaults.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# ----------------------------------------------------------------- black
[tool.black]
line-length = 100
target-version = ["py312"]

# ----------------------------------------------------------------- mypy
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
# mypy is configured but kept non-blocking in CI.

# ----------------------------------------------------------------- pytest
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# ----------------------------------------------------------------- coverage
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
